--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,7 +44,8 @@ Style/FrozenStringLiteralComment:
   EnforcedStyle: never
 Style/RedundantAssignment:
   Enabled: false
-
+Style/RedundantConstantBase:
+  Enabled:false
 Layout/HashAlignment:
   EnforcedColonStyle: key
 Layout/ExtraSpacing:
